2009-11-12  Luchee Go <gol@lexmark.com>

	* PPD/Lexmark/Lexmark_C540.ppd,
	  PPD/Lexmark/Lexmark_C543.ppd,
	  PPD/Lexmark/Lexmark_C544.ppd,
	  PPD/Lexmark/Lexmark_C546.ppd: Added Lexmark PPD

2009-11-09  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/hpijs-pcl5c.xml: Added the Generic PCL 6/PCL XL printer
	  to the list of printers supported by "hpijs-pcl5c".

2009-11-06  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Canon-i450.xml: Correct comments. Consumables
	  info has to go into the printer's comment not into the comment
	  of the printer/driver combo.

2009-10-27  Dafydd Crosby <dafydd.crosby@gmail.com>

	* printer/Oki-B6300.xml: Printer uses PJL, added pxlmono
	  driver

	* printer/HP-LaserJet_P4014.xml,
	  printer/HP-LaserJet_P4015.xml: New printer database entries

2009-10-09  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Kyocera-CS-C2525E_KPDL.xml,
	  printer/Kyocera-CS-C3225E_KPDL.xml,
	  printer/Kyocera-CS-C3232E_KPDL.xml,
	  printer/Kyocera-CS-C4035E_KPDL.xml,
	  printer/Kyocera-CS_250ci_KPDL.xml,
	  printer/Kyocera-CS_300ci_KPDL.xml,
	  printer/Kyocera-CS_400ci_KPDL.xml,
	  printer/Kyocera-CS_500ci_KPDL.xml,
	  printer/Kyocera-FS-C5100DN_KPDL.xml,
	  printer/Kyocera-FS-C5200DN_KPDL.xml,
	  printer/Kyocera-FS-C5300DN_KPDL.xml,
	  printer/Kyocera-FS-C5350DN_KPDL.xml,
	  printer/Kyocera-FS-C5400DN_KPDL.xml,
	  printer/Kyocera-FS-C8100DNplus_KPDL.xml,
	  printer/Kyocera-KM-C2525E_KPDL.xml,
	  printer/Kyocera-KM-C3225E_KPDL.xml,
	  printer/Kyocera-KM-C3232E_KPDL.xml,
	  printer/Kyocera-KM-C4035E_KPDL.xml,
	  printer/Kyocera-TASKalfa_250ci_KPDL.xml,
	  printer/Kyocera-TASKalfa_300ci_KPDL.xml,
	  printer/Kyocera-TASKalfa_400ci_KPDL.xml,
	  printer/Kyocera-TASKalfa_500ci_KPDL.xml: New printer database
	  entries for the new Kyocera printers.

	* PPD/Kyocera/de/Kyocera_CS-C2525E_de.ppd,
	  PPD/Kyocera/de/Kyocera_CS-C3225E_de.ppd,
	  PPD/Kyocera/de/Kyocera_CS-C3232E_de.ppd,
	  PPD/Kyocera/de/Kyocera_CS-C4035E_de.ppd,