@@ -4,19 +4,41 @@
   <supplier>Lexmark</supplier>
   <manufacturersupplied>Lexmark</manufacturersupplied>
   <!--not "thirdpartysupplied"-->
-  <license>Only verbatim redistribution</license>
+  <license>Redistribution with and without modification, keep copyright notice</license>
   <licensetext>
     <en>
 
-      Copyright (c) Lexmark International Inc.  All Rights Reserved.
+******************************************************************************
+              Copyright 2008 Lexmark International, Inc. All rights reserved.
 
-      Permission is granted for redistribution of this file as
-      long as the copyright notice is intact and the content
-      of the file is not altered in any way from its original form.
+******************************************************************************
+**    License
+******************************************************************************
+
+Redistribution of this file, with or without modification, is permitted 
+provided that the following conditions are met:
+ 
+      Redistributions of this file must reproduce the above copyright notice, 
+      this list of conditions and the following disclaimer in the file and 
+      documentation and/or other materials provided with the distribution.
+
+      Neither the name of Lexmark International, Inc. nor the names of its 
+      contributors may be used to endorse or promote products derived 
+      from this file without specific prior written permission.
+
+THIS FILE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
+ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED 
+WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE 
+DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE 
+FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL 
+DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR 
+SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER 
+CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, 
+OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE 
+OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
     </en>
   </licensetext>
-  <nonfreesoftware />
   <!--not "patents"-->
   <!--no "supportcontacts"-->
   <shortdescription>
