@@ -1,0 +1,47 @@
+<printer id="printer/Lexmark-C544">
+  <make>Lexmark</make>
+  <model>C544</model>
+  <mechanism>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>2400</x>
+        <y>1200</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <lang>
+    <postscript level="3" />
+  </lang>
+  <autodetect>
+    <general>
+      <ieee1284>MFG: Lexmark;MDL: Lexmark C544</ieee1284>
+      <manufacturer>Lexmark</manufacturer>
+      <model>Lexmark C544</model>
+    </general>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>Postscript-Lexmark</driver>
+  <drivers>
+    <driver>
+      <id>Postscript</id>
+    </driver>
+    <driver>
+      <id>Postscript-Lexmark</id>
+      <ppd>PPD/Lexmark/Lexmark_C544.ppd</ppd>
+    </driver>
+  </drivers>
+  <comments>
+    <en>
+      This database entry was automatically generated
+      from the PPD file for this printer.&lt;p&gt;
+
+      Maximum paper width: 8.5 inches / 21.6 cm
+      (Standard format printer)&lt;p&gt;
+
+      Printing engine speed: 36 pages/min&lt;p&gt;
+
+
+    </en>
+  </comments>
+</printer>
