@@ -1,9 +1,20 @@
+2009-11-13  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* printer/Lexmark-C540.xml, printer/Lexmark-C543.xml,
+	  printer/Lexmark-C544.xml, printer/Lexmark-C546.xml: Added
+	  printer XML entries for the new Lexmark PPD files.
+
+	* driver/Postscript-Lexmark.xml: Updated license information to match
+	  the new PPD files.
+
 2009-11-12  Luchee Go <gol@lexmark.com>
 
 	* PPD/Lexmark/Lexmark_C540.ppd,
 	  PPD/Lexmark/Lexmark_C543.ppd,
 	  PPD/Lexmark/Lexmark_C544.ppd,
-	  PPD/Lexmark/Lexmark_C546.ppd: Added Lexmark PPD
+	  PPD/Lexmark/Lexmark_C546.ppd
+	  driver/Postscript-Lexmark.xml: Added Lexmark PPDs and driver XML
+	  entry.
 
 2009-11-09  Till Kamppeter <till.kamppeter@gmail.com>
 
